--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ scipy==1.13.0
 six==1.16.0
 stack-data==0.6.3
 statsmodels==0.14.2
+streamlit==1.33.0
 tenacity==8.2.3
 threadpoolctl==3.4.0
 tornado==6.4
